--- a/advsearch.html
+++ b/advsearch.html
@@ -81,7 +81,7 @@
             </div>
             
             <marquee class="queue">....SITE UNDER CONSTRUCTION....SITE UNDER CONSTRUCTION....SITE UNDER CONSTRUCTION....SITE UNDER CONSTRUCTION....</marquee>
-
+            <marquee class="queue">NEW ADDITION BEFORE GIT USAGE</marquee>
         </div>
 
     </body>
