Added footer for Google Search page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+
         <div class="images">
             <a id="advsearch"  href="./advsearch.html">
                 Advanced Search
@@ -39,11 +40,26 @@
                             <a class="languages" href="https://www.google.com/setprefs?sig=0_nP6iHylxYTBLUjsa3Rf8kSnSOcg%3D&hl=ta&source=homepage&sa=X&ved=0ahUKEwiO3NirnqiDAxUcyDgGHbhwA4IQ2ZgBCBs">தமிழ்</a>
                             <a class="languages" href="https://www.google.com/setprefs?sig=0_nP6iHylxYTBLUjsa3Rf8kSnSOcg%3D&hl=te&source=homepage&sa=X&ved=0ahUKEwjU-MTJoKiDAxUAbmwGHXjVApwQ2ZgBCBk">తెలుగు</a>
                     </div>
-                                      
+                                     
                 </form> 
             </div>
 
         </div>
+
+        <footer id="footer">
+            <p id="india">India</p> 
+            <div id="container">           
+                <p class="footitems"><a href="https://about.google/?utm_source=google-IN&utm_medium=referral&utm_campaign=hp-footer&fg=1">About</a></p>
+                <p class="footitems"><a href="https://ads.google.com/intl/en_in/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></p>
+                <p class="footitems" ><a href="https://www.google.com/intl/en_in/business/">Business</a></p>
+                <p class="footitems"><a href="https://www.google.com/search/howsearchworks/?fg=1">How Search works</a></p>
+                <div class="nested" id="nested">
+                    <p class="footitems1"><a href="https://policies.google.com/privacy?hl=en-IN&fg=1">Privacy</a></p>
+                    <p class="footitems1"><a href="https://policies.google.com/terms?hl=en-IN&fg=1">Terms</a></p>
+                    <p class="footitems1"><a href="">Settings</a></p>
+                </div>
+            </div> 
+        </footer>
 
     </body>
 
