--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <body>
 
         <div class="images">
+            <a id="advsearch"  href="./advtrial.html">
+                Advanced trial
+            </a>
             <a id="advsearch"  href="./advsearch.html">
                 Advanced Search
             </a>
