image in Google Images
fixed position of image text near google logo

--- a/imagesearch.html
+++ b/imagesearch.html
@@ -13,14 +13,20 @@
             <a id="top-right" href="./index.html">Google Search</a>
         </div>
         
+        
         <div id="whole">          
 
-            <div class="container">
+            <!-- <div class="container">
                 <img id="logo" src="google_search.png" alt="google search">
                 <p class="bottom-right "id="text">images</p>
-            </div>
+            </div> -->
 
+            <div class="imgcontainer">
+                <img src="./google_search.png" alt="google logo" >
+                <div class="bottomright">image</div>
+              </div>
             <div>
+
                 <form action="https://www.google.com/imghp">
                     <input id="searchbar" type="text image" name="q">                   
                 </form>
