--- a/imagesearch.html
+++ b/imagesearch.html
@@ -22,8 +22,7 @@
             </div> -->
 
             <div class="imgcontainer">
-                <img src="./google_search.png" alt="google logo" >
-                <div class="bottomright">image</div>
+                <img src="./google_images_logo.png" alt="google logo" height="95" width="272">
               </div>
             <div>
 
