--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                         </button> 
                     </div> 
 
-                    <div class="offeredin">
+<!--                     <div class="offeredin">
                         Google offered in: 
                             <a class="languages" href="https://www.google.com/setprefs?sig=0_nP6iHylxYTBLUjsa3Rf8kSnSOcg%3D&hl=hi&source=homepage&sa=X&ved=0ahUKEwjCtb7Sy6eDAxWsjVYBHTUtAaAQ2ZgBCBc">हिन्दी</a>
                             <a class="languages" href="https://www.google.com/setprefs?sig=0_nP6iHylxYTBLUjsa3Rf8kSnSOcg%3D&hl=ta&source=homepage&sa=X&ved=0ahUKEwiO3NirnqiDAxUcyDgGHbhwA4IQ2ZgBCBs">தமிழ்</a>
                             <a class="languages" href="https://www.google.com/setprefs?sig=0_nP6iHylxYTBLUjsa3Rf8kSnSOcg%3D&hl=te&source=homepage&sa=X&ved=0ahUKEwjU-MTJoKiDAxUAbmwGHXjVApwQ2ZgBCBk">తెలుగు</a>
-                    </div>
+                    </div> -->
                                      
                 </form> 
             </div>
